wal-macros/tests/html_macro_tests/attributes/attributes_fail.stderr
error: expected `=`
 --> tests/html_macro_tests/attributes/attributes_fail.rs:4:22
  |
4 |     html! { <div attr></> };
  |                      ^

error: Expected a literal or an expression block
 --> tests/html_macro_tests/attributes/attributes_fail.rs:5:23
  |
5 |     html! { <div attr=></> };
  |                       ^

error: expected `=`
 --> tests/html_macro_tests/attributes/attributes_fail.rs:6:23
  |
6 |     html! { <div attr "value"></> };
  |                       ^^^^^^^

error: Duplicate attribute `attr`
 --> tests/html_macro_tests/attributes/attributes_fail.rs:7:30
  |
7 |     html! { <div attr="key1" attr="key2"></> };
  |                              ^^^^

error: Expected a literal or an expression block
 --> tests/html_macro_tests/attributes/attributes_fail.rs:8:25
  |
8 |     html! { <div attr1= attr2="key2"></> };
  |                         ^^^^^
